--- a/config/database.yml
+++ b/config/database.yml
@@ -49,6 +49,8 @@ test:
 #
 production:
   <<: *default
-  database: furima_36493_production
-  username: furima_36493
-  password: <%= ENV['FURIMA_36493_DATABASE_PASSWORD'] %>
+  adapter: mysql2
+  database: furima-36493_production
+  username: root
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
